// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ Example/Button ] should render Large 1`] = `
<DocumentFragment>
  <button
    class="storybook-button storybook-button--large storybook-button--secondary"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`[ Example/Button ] should render Primary 1`] = `
<DocumentFragment>
  <button
    class="storybook-button storybook-button--medium storybook-button--primary"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`[ Example/Button ] should render Secondary 1`] = `
<DocumentFragment>
  <button
    class="storybook-button storybook-button--medium storybook-button--secondary"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`[ Example/Button ] should render Small 1`] = `
<DocumentFragment>
  <button
    class="storybook-button storybook-button--small storybook-button--secondary"
    type="button"
  >
    Button
  </button>
</DocumentFragment>
`;
